2005-09-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/gst-xmlinspect.py:
	* common/gtk-doc-plugins.mak:
	  only inspect plugins for this given package
	  require gst-python 0.9

2005-09-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* autogen.sh:
	* common/gst-xmlinspect.py:
	* configure.ac:
	* docs/Makefile.am:
	* docs/plugins/inspect/plugin-alsa.xml:
	* docs/plugins/inspect/plugin-audioresample.xml:
	* docs/plugins/inspect/plugin-ffmpegcolorspace.xml:
	* docs/plugins/inspect/plugin-ogg.xml:
	* docs/plugins/tmpl/element-gnomevfssink.sgml:
	* docs/plugins/tmpl/element-multifdsink.sgml:
	* docs/plugins/tmpl/element-tcpserversink.sgml:
	* docs/plugins/tmpl/element-vorbisenc.sgml:
	* gst-plugins-base.spec.in:
	  various doc-related updates

2005-08-31  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_render):
	Resync if the buffer timestamps drift more than a 10th 
	of a second.

2005-08-31  Tim-Philipp Müller  <tim at centricular dot net>

	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_set_property),
	(gst_v4lsrc_get_property):
	  The 'timestamp-offset' property is registered as an int64, so
	  let's use g_value_{set|get}_int64() in our setter and getter
	  functions (makes it work and fixes warnings with gst-inspect).

2005-08-30  Wim Taymans  <wim@fluendo.com>

	* check/elements/audioconvert.c: (setup_audioconvert):
	* check/elements/audioresample.c: (setup_audioresample):
	* check/elements/volume.c: (setup_volume):
	Fix checks.

2005-08-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/gtk-doc-plugins.mak:
	* common/plugins.xsl:
	* docs/plugins/Makefile.am:
	  make module a param

2005-08-30  Stefan Kost  <ensonic@users.sf.net>

	* examples/seeking/seek.c: (make_mp3_pipeline),
	(make_mpeg_pipeline), (seek_cb), (start_seek), (stop_seek),
	(play_cb), (pause_cb), (stop_cb):
	  update the example

2005-08-30  Stefan Kost  <ensonic@users.sf.net>
